# StartAppTauri

./: .gitignore  README.md  angular.json  package-lock.json  package.json
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs
src-tauri/src/controllers/: mod.rs  teste_data_controller.rs
src-tauri/src/models/: cliente.rs  mod.rs  teste_data.rs  usuario.rs
src/app/: app.routes.ts
src/app/presentation/pages/dash-routing/: dash-routing.component.html  dash-routing.component.spec.ts  dash-routing.component.ts
src/app/presentation/pages/dash-routing/home/: home.component.css  home.component.html  home.component.ts
src/app/presentation/pages/public-routing/: public-routing.component.html  public-routing.component.spec.ts  public-routing.component.ts
src/app/presentation/pages/public-routing/login/: login.component.css  login.component.html  login.component.ts
